fix: adjust tech logos on mobile

--- a/src/components/Tech/__list/Tech__list.css
+++ b/src/components/Tech/__list/Tech__list.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 30px 70px;
   width: 230px;
   list-style: none;
   padding: 0;
